<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Time-Recording Auto-Export (Tasker Plugin)</string>
    <string name="main_activity_label">Time-Recording Export Plugin</string>
    <string name="plugin_name">Time-Recording Export</string>
    <string name="common">Common</string>
    <string name="launch_tasker">Launch Tasker</string>
    <string name="about_and_help">About &amp; Help</string>
    <string name="report_error">Report an error</string>
    <string name="report_error_summary">Something doesn\'t work so well? Just describe the error and it will be fixed.</string>
    <string name="request_feature">Request a feature</string>
    <string name="request_feature_summary">You\'re missing a feature? Just describe your idea and maybe it will be live in the next version.</string>
    <string name="global_settings">Global settings</string>
    <string name="clear_last_export_date">Clear last export date</string>
    <string name="clear_last_export_date_summary">Resets the saved last export date</string>
    <string name="clear_last_export_date_cleared">The saved date was cleared</string>
    <string name="export_start_date">Export start date</string>
    <string name="export_end_date">Export end date</string>
    <string name="automatic">Auto</string>
    <string name="export_format">Export format</string>
    <string name="export_type">Export type</string>
    <string name="destination_file_path">Output file path</string>
    <string name="export_to">Export to</string>
    <string name="export_to_hint">e. g. /sdcard/temp/timerec_output.xml</string>
    <string name="exported_to">exported to</string>
    <string name="main_view_information_text">This is a tasker plugin, you should find me in the action menu under "Plugins".</string>
    <string name="export_start_date_auto_info">If this is checked, start date will be last export date + 1 day.</string>
    <string name="export_end_date_auto_info">If this is checked, end date will be today.</string>
    <string name="change_last_export_date">Change last export date</string>
    <string name="export_start_parameters">Parameter Export-From</string>
    <string name="export_end_parameters">Parameter Export-To</string>
    <string name="export_common_parameters">Parameter format/destination</string>
    <string name="today">Today</string>
    <string name="export_start_date_today_info">If this is checked, start date will be today.</string>
    <string name="not_set_last_export_date">Don\'t set last export date</string>
    <string name="not_set_last_export_date_info">If this is checked, the last export date will not be set/remembered.</string>

    <string-array name="export_types">
        <item>E1</item>
        <item>E2</item>
        <item>E3</item>
        <item>E4</item>
        <item>E5</item>
        <item>E6</item>
        <item>E7</item>
        <item>E8</item>
    </string-array>
    <string name="export_type_default">E1</string>

    <string-array name="export_formats">
        <item>XML</item>
        <item>CSV</item>
        <item>HTML</item>
        <item>XLS</item>
    </string-array>
    <string name="export_format_default">XML</string>

    <string name="developer_mail">bernd@berrnd.de</string>

</resources>
