<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/export_start_parameters">

        <CheckBoxPreference
            android:key="pref_export_start_date_auto"
            android:title="@string/automatic"
            android:summary="@string/export_start_date_auto_info"
            android:defaultValue="true"
            android:disableDependentsState="true"/>

        <CheckBoxPreference
            android:key="pref_export_start_date_today"
            android:title="@string/today"
            android:summary="@string/export_start_date_today_info"
            android:defaultValue="false"
            android:disableDependentsState="true"/>

        <de.berrnd.Time_Recording_Auto_Export_Tasker_Plugin.DatePickerPreference
            android:key="pref_export_start_date"
            android:title="@string/export_start_date"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/export_end_parameters">

        <CheckBoxPreference
            android:key="pref_export_end_date_auto"
            android:title="@string/automatic"
            android:summary="@string/export_end_date_auto_info"
            android:defaultValue="true"
            android:disableDependentsState="true"/>

        <de.berrnd.Time_Recording_Auto_Export_Tasker_Plugin.DatePickerPreference
            android:key="pref_export_end_date"
            android:title="@string/export_end_date"
            android:dependency="pref_export_end_date_auto"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/export_common_parameters">

        <ListPreference
            android:key="pref_export_format"
            android:title="@string/export_format"
            android:entries="@array/export_formats"
            android:entryValues="@array/export_formats"
            android:defaultValue="@string/export_format_default" />

        <ListPreference
            android:key="pref_export_type"
            android:title="@string/export_type"
            android:entries="@array/export_types"
            android:entryValues="@array/export_types"
            android:defaultValue="@string/export_type_default" />

        <EditTextPreference
            android:key="pref_export_to"
            android:title="@string/export_to"
            android:hint="@string/export_to_hint"/>

    </PreferenceCategory>

    <CheckBoxPreference
        android:key="pref_export_not_set_last_export_date"
        android:title="@string/not_set_last_export_date"
        android:summary="@string/not_set_last_export_date_info"
        android:defaultValue="false"/>

</PreferenceScreen>