<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/common">

            <Preference
                    android:summary="@string/main_view_information_text"
                    android:enabled="false"/>

            <Preference
                    android:key="launch_tasker"
                    android:title="@string/launch_tasker">
            </Preference>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/about_and_help">

        <Preference
                android:key="report_error"
                android:title="@string/report_error"/>

        <Preference
                android:key="request_feature"
                android:title="@string/request_feature"/>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/global_settings">

        <de.berrnd.Time_Recording_Auto_Export_Tasker_Plugin.DatePickerPreference
            android:key="LAST_EXPORT"
            android:title="@string/change_last_export_date"/>

    </PreferenceCategory>

</PreferenceScreen>